[package]
name = "njupt_connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
serde = { version = "1.0.137", features = ["std", "serde_derive"]}
surf = "2.3.2"
toml = "0.5.9"
urlencoding = "2.1.0"